--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -30,6 +30,61 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- First Time Block: 9AM -->
+      <div class="row time-block">
+        <div class="time col-2">9AM</div>
+        <textarea name="time-block1" id="time-block1" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+
+      <!-- Second Time Block: 10AM -->
+      <div class="row time-block">
+        <div class="time col-2">10AM</div>
+        <textarea name="time-block2" id="time-block2" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Third Time Block: 11AM -->
+      <div class="row time-block">
+        <div class="time col-2">11AM</div>
+        <textarea name="time-block3" id="time-block3" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Fourth Time Block: 12PM -->
+      <div class="row time-block">
+        <div class="time col-2">12PM</div>
+        <textarea name="time-block4" id="time-block4" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Fifth Time Block: 1PM -->
+      <div class="row time-block">
+        <div class="time col-2">1PM</div>
+        <textarea name="time-block5" id="time-block5" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Sixth Time Block: 2PM -->
+      <div class="row time-block">
+        <div class="time col-2">2PM</div>
+        <textarea name="time-block6" id="time-block6" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Seventh Time Block: 3PM -->\
+      <div class="row time-block">
+        <div class="time col-2">3PM</div>
+        <textarea name="time-block7" id="time-block7" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- Eigth Time Block: 4PM -->
+      <div class="row time-block">
+        <div class="time col-2">4PM</div>
+        <textarea name="time-block8" id="time-block8" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
+      <!-- 9th Time Block: 5PM -->
+      <div class="row time-block">
+        <div class="time col-2">5PM</div>
+        <textarea name="time-block9" id="time-block9" cols="1" rows="1" class="description col-8"></textarea>
+        <div class="save-btn col-2"><i class="far fa-save"></i></div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
