--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -26,7 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="current-day" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -67,7 +67,7 @@
         <textarea name="time-block6" id="time-block6" cols="1" rows="1" class="description col-8"></textarea>
         <div class="save-btn col-2"><i class="far fa-save"></i></div>
       </div>
-      <!-- Seventh Time Block: 3PM -->\
+      <!-- Seventh Time Block: 3PM -->
       <div class="row time-block">
         <div class="time col-2">3PM</div>
         <textarea name="time-block7" id="time-block7" cols="1" rows="1" class="description col-8"></textarea>
@@ -89,5 +89,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
